--- a/src/Components/Sign-In/Login/Login.module.css
+++ b/src/Components/Sign-In/Login/Login.module.css
@@ -2,6 +2,9 @@
     font-family: SF Pro Display,sans-serif;
     font-weight: 400;
 }
+:root{
+    --primary: #007FFF;
+}
 
 .login{
     display: flex;
@@ -30,7 +33,6 @@
 .forgotPassword{
     font-size: 15px;
     line-height: 18px;
-    padding: 10px 0;
     cursor: pointer;
 }
 
@@ -43,15 +45,59 @@
     line-height: 20px;
     padding: 10px 16px;
     width: 437px;
-    border: 1px solid grey;
-    background: #BFC2C2;
+    border: 1px solid #6F7E8C;
+    background: #EFEFEF;
     border-radius: 12px;
     outline: none;
 }
+
+.email:focus::placeholder{
+    font-style: italic;
+    transform: translateY(-30px);
+    transition: .1s;
+}
+
+.password:focus::placeholder{
+    font-style: italic;
+    transform: translateY(-30px);
+    transition: .1s;
+}
+
+.email:focus, .password:focus{
+    background-color: white;
+    border: 1px solid var(--primary);
+}
+
+.email:focus ~ .label{
+    display: block;
+    color: var(--primary);
+}
+
+.password:focus ~ .label{
+    display: block;
+    color: var(--primary);
+}
+
+.label{
+    font-size: 19px;
+    color: #8C8C8C;
+    line-height: 23px;
+    position: absolute;
+    top: -10px;
+    left: 15px;
+    background-color: white;
+    display: none;
+    padding: 0 6px 0 5px;
+}
+
+
+
+
 .form{
     display: flex;
     flex-direction: column;
-    row-gap: 15px;
+    row-gap: 20px;
+    position: relative;
 }
 
 .passwordEye{
@@ -75,6 +121,10 @@
     border-radius: 12px;
     background: #141414;
     cursor: pointer;
+}
+
+.btn:hover{
+    text-decoration: underline deepskyblue;
 }
 
 .text{
