--- a/src/Components/Profile/ProfilePage/ProfilePage.module.css
+++ b/src/Components/Profile/ProfilePage/ProfilePage.module.css
@@ -1,50 +1,109 @@
-
+*{
+    font-family: SF Pro Display, sans-serif;
+    text-decoration: none;
+}
 .profilePage{
     display: flex;
     background-color: white;
 }
 
-.tabBar{
-    display: flex;
-    flex-direction: column;
-    row-gap: 30px;
-    padding: 30px 42px 0 42px;
-    width: 200px;
-    position: static;
-    background-color: white;
-    border-right: 1px solid grey;
+.loginPage__right{
+    max-width: 639px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 80px;
 }
 
-.tab__logo{
-    margin-bottom: 40px;
+.info{
+    display: flex;
+    justify-content: space-between;
+}
+
+.nextPage{
+    align-self: flex-start;
+    margin-top: 30px;
     cursor: pointer;
 }
 
-.tab__asideText{
+.information{
     display: flex;
-    align-items: center;
-    column-gap: 15px;
-    margin-bottom: 20px;
+    column-gap: 30px;
+}
+
+.aboutUser{
+
+}
+
+.title{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+}
+
+.subtitle{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
     cursor: pointer;
 }
 
-.tab__text{
-    font-family: SF Pro Display, sans-serif;
+.threadsNet{
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 18px;
+    margin-left: 5px;
+    padding: 7px 10px;
+    background: #EEEEEE;
+    border-radius: 15px;
+    color: #999999;
+}
+
+.followers{
     font-size: 17px;
     font-weight: 400;
-    line-height: 19px;
-    color: #141414;
-    text-decoration: none;
+    line-height: 18px;
+    color: #999999;
+    cursor: pointer;
 }
 
-.tab__asideText:hover .tab__text{
+.buttons{
+    display: flex;
+    column-gap: 25px;
+}
+
+.btn{
+    font-size: 17px;
     font-weight: 700;
+    line-height: 20px;
+    color: #141414;
+    padding: 10px 40px;
+    border: 2px solid #D9D9D9;
+    border-radius: 12px;
+    background-color: transparent;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 40px;
 }
 
-.content{
-    margin-top: 230px;
+.btn:hover{
+    text-decoration: underline;
 }
 
-.loginPage__right{
+.text{
+    text-align: center;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 26px;
+    margin-top: 30px;
+    padding: 20px 50px;
+    border-bottom: 1px solid #141414;
+}
 
+.textNotPost{
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
+    color: #999999;
+    margin-top: 80px;
 }
