--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -1,12 +1,15 @@
 .tabBar{
+    padding: 30px 42px 0 42px;
+    width: 200px;
+    background-color: white;
+    border-right: 1px solid grey;
+}
+
+.positionFixed{
     display: flex;
     flex-direction: column;
     row-gap: 30px;
-    padding: 30px 42px 0 42px;
-    width: 200px;
-    position: static;
-    background-color: white;
-    border-right: 1px solid grey;
+    position: fixed;
 }
 
 .tab__logo{
