--- a/src/Components/Profile/ProfilePage/ProfilePage.module.css
+++ b/src/Components/Profile/ProfilePage/ProfilePage.module.css
@@ -1,53 +1,54 @@
-*{
+* {
     font-family: SF Pro Display, sans-serif;
     text-decoration: none;
 }
-.profilePage{
+
+.profilePage {
     display: flex;
     background-color: white;
 }
 
-.loginPage__right{
+.loginPage__right {
     max-width: 639px;
     width: 100%;
     margin: 0 auto;
     padding-top: 80px;
 }
 
-.info{
+.info {
     display: flex;
     justify-content: space-between;
 }
 
-.nextPage{
+.nextPage {
     align-self: flex-start;
     margin-top: 30px;
     cursor: pointer;
 }
 
-.information{
+.information {
     display: flex;
     column-gap: 30px;
 }
 
-.aboutUser{
+.aboutUser {
 
 }
 
-.title{
+.title {
     font-size: 32px;
     font-weight: 700;
     line-height: 38px;
 }
 
-.subtitle{
+.subtitle {
     font-size: 16px;
     font-weight: 700;
     line-height: 18px;
     cursor: pointer;
 }
 
-.threadsNet{
+.threadsNet {
     font-size: 13px;
     font-weight: 400;
     line-height: 18px;
@@ -58,7 +59,7 @@
     color: #999999;
 }
 
-.followers{
+.followers {
     font-size: 17px;
     font-weight: 400;
     line-height: 18px;
@@ -66,12 +67,12 @@
     cursor: pointer;
 }
 
-.buttons{
+.buttons {
     display: flex;
     column-gap: 25px;
 }
 
-.btn{
+.btn {
     font-size: 17px;
     font-weight: 700;
     line-height: 20px;
@@ -85,11 +86,11 @@
     margin-top: 40px;
 }
 
-.btn:hover{
+.btn:hover {
     text-decoration: underline;
 }
 
-.text{
+.text {
     text-align: center;
     font-size: 17px;
     font-weight: 500;
@@ -99,7 +100,7 @@
     border-bottom: 1px solid #141414;
 }
 
-.textNotPost{
+.textNotPost {
     font-size: 19px;
     font-weight: 400;
     line-height: 26px;
@@ -107,3 +108,92 @@
     color: #999999;
     margin-top: 80px;
 }
+
+.repost {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    margin-top: 30px;
+}
+
+.span {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #999999;
+}
+
+.threads {
+    display: flex;
+    column-gap: 15px;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #D9D9D9;
+}
+
+.avatar {
+    align-self: flex-start;
+    margin-top: 15px;
+}
+
+.body{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.bodyTitle {
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 18px;
+    color: black;
+    cursor: pointer;
+    margin-bottom: -10px;
+}
+
+.bodySubtitle {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    color: black;
+}
+
+.icons{
+    display: flex;
+    column-gap: 15px;
+}
+.icon{
+    cursor: pointer;
+}
+
+
+.bodyText {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #999999;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.timeAgo{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    color: #999999;
+}
+
+.dot{
+    position: absolute;
+    top: 14px;
+    left: 72px;
+    font-weight: 700;
+    color: #999999;
+}
+
+.positionDot{
+    display: flex;
+    position: relative;
+}
+
+
