threads grid followers list

--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -3,7 +3,7 @@
     width: 200px;
     background-color: white;
     border-right: 1px solid grey;
-    height: 100vh;
+    height: calc(100vh + 50vh);
 }
 
 .positionFixed{
