--- a/src/Components/Main/MainPage/MainPage.module.css
+++ b/src/Components/Main/MainPage/MainPage.module.css
@@ -11,7 +11,7 @@
 .mainPage__right{
     max-width: 640px;
     width: 100%;
-    margin: 0 170px 0 120px;
+    margin: 0 80px 0 100px;
 }
 
 .homeTitle{
@@ -24,21 +24,186 @@
 .sections{
     display: flex;
     width: 100%;
-    position: fixed;
 }
 
 .sectionsTitle{
     font-size: 19px;
     font-weight: 600;
     line-height: 22px;
-    width: 340px;
+    width: 320px;
     display: grid;
     place-content: center;
     padding: 20px 0;
     cursor: pointer;
-
+    border-bottom: 1px solid black;
 }
 
 .sectionsTitle.active{
-    border-bottom: 3px solid black;
+    border-bottom: 4px solid black;
+}
+
+.threads{
+    margin-top: -20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.createThreads{
+
+}
+
+.textarea{
+    outline: none;
+    resize: none;
+    border: none;
+    width: 70%;
+}
+
+.writeThreads{
+    display: flex;
+    column-gap: 10px;
+}
+
+.name{
+    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+    cursor: pointer;
+}
+
+.media{
+    cursor: pointer;
+    margin-left: 50px;
+}
+
+.sendThreads{
+
+}
+
+.btn{
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 18px;
+    color: #0095F659;
+}
+
+.text{
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    color: #999999;
+}
+
+.input{
+    display: none;
+}
+
+.top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.under{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.feed{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 10px;
+    padding: 10px 0;
+    border-top: 1px solid #999999;
+}
+
+.userPhoto{
+    position: relative;
+}
+
+.userImg{
+    cursor: pointer;
+}
+
+.subscribe{
+    position: absolute;
+    bottom: 0;
+    left: 62%;
+    cursor: pointer;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+}
+
+.contentTop{
+    display: flex;
+    justify-content: space-between;
+    margin-top: -15px;
+}
+
+.title{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+    cursor: pointer;
+}
+
+.titleText{
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    cursor: pointer;
+    margin-top: -10px;
+}
+
+.subtitle{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    color: #999999;
+}
+
+.contentBot{
+
+}
+
+.activity{
+    display: flex;
+    column-gap: 12px;
+    margin: 10px 0 0 0;
+}
+
+.activityBtn{
+    cursor: pointer;
+}
+
+.dot{
+    position: absolute;
+    top: 14px;
+    left: 90px;
+    font-weight: 700;
+    color: #999999;
+}
+
+.positionDot{
+    display: flex;
+    position: relative;
+}
+
+.bodyText {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #999999;
+    cursor: pointer;
+    margin-right: 20px;
 }
