--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -107,3 +107,13 @@
     padding: 8px 20px;
     cursor: pointer;
 }
+
+.border{
+    border: 1px solid #999999;
+    padding: 3px;
+    border-radius: 8px;
+}
+
+.tab__none{
+    display: none;
+}
