--- a/src/Components/Sign-In/ForgotPassword/ForgotPassword.module.css
+++ b/src/Components/Sign-In/ForgotPassword/ForgotPassword.module.css
@@ -35,7 +35,7 @@
     padding: 10px 16px;
     width: 437px;
     border: 1px solid grey;
-    background: #BFC2C2;
+    background: #EFEFEF;
     border-radius: 12px;
     outline: none;
 }
@@ -53,6 +53,23 @@
     border-radius: 12px;
     background: #141414;
     cursor: pointer;
+}
+
+.form__label{
+    position: relative;
+}
+
+.register__labelErrorUser{
+    position: absolute;
+    top: -35px;
+    left: 10px;
+    color: #ff5b57;
+    font-size: 16px;
+    font-family: Gotham Pro, sans-serif;
+}
+
+.error{
+    background-color: #F8EEBA;
 }
 
 
