--- a/src/Components/Sign-Up/Register/Register.module.css
+++ b/src/Components/Sign-Up/Register/Register.module.css
@@ -27,20 +27,11 @@
     margin-bottom: 60px;
 }
 
-.email, .name, .password{
-    font-size: 17px;
-    line-height: 20px;
-    padding: 10px 16px;
-    width: 437px;
-    border: 1px solid grey;
-    background: #BFC2C2;
-    border-radius: 12px;
-    outline: none;
-}
+
 .form{
     display: flex;
     flex-direction: column;
-    row-gap: 15px;
+    row-gap: 20px;
 }
 
 .passwordEye{
@@ -65,6 +56,34 @@
     background: #141414;
     cursor: pointer;
     margin-top: 60px;
+}
+
+.email, .name, .password{
+    font-size: 17px;
+    line-height: 20px;
+    padding: 10px 16px;
+    width: 437px;
+    border: 1px solid grey;
+    background: #EFEFEF;
+    border-radius: 12px;
+    outline: none;
+}
+
+.form__label{
+    position: relative;
+}
+
+.register__labelErrorUser{
+    position: absolute;
+    top: -35px;
+    left: 10px;
+    color: #ff5b57;
+    font-size: 16px;
+    font-family: Gotham Pro, sans-serif;
+}
+
+.error{
+    background-color: #F8EEBA;
 }
 
 
