--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -73,6 +73,8 @@
     font-weight: 600;
     line-height: 17px;
     color: #141414;
+    width: 100px;
+    word-wrap: break-word;
 }
 .subtitle{
     margin-top: 2px;
