--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -107,7 +107,12 @@
     background-color: transparent;
     border-radius: 8px;
     padding: 8px 20px;
+    border: 1px solid #D9D9D9;
     cursor: pointer;
+}
+
+.button{
+    color: black;
 }
 
 .border{
