--- a/src/Components/Layout/aside.css
+++ b/src/Components/Layout/aside.css
@@ -22,10 +22,12 @@
     transform: scale(1);
     transition: .8s;
     margin-top: -30px;
-    padding: 0 15px;
+    padding: 0 15px 0 30px;
     box-shadow: 6px 0 6px -5px #333;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    overflow-x: scroll; /* Включаем горизонтальную прокрутку */
+    white-space: nowrap; /* Запрет переноса текста */
 }
 
 .aside__content{
