--- a/src/Components/Main/MainPage/MainPage.module.css
+++ b/src/Components/Main/MainPage/MainPage.module.css
@@ -56,7 +56,7 @@
     outline: none;
     resize: none;
     border: none;
-    width: 70%;
+    width: 200%;
 }
 
 .writeThreads{
@@ -119,7 +119,7 @@
 
 .feed{
     display: flex;
-    justify-content: space-between;
+    column-gap: 30px;
     align-items: flex-start;
     margin-top: 10px;
     padding: 10px 0;
@@ -150,6 +150,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: -15px;
+    width: 570px;
 }
 
 .title{
@@ -172,6 +173,9 @@
     font-weight: 400;
     line-height: 18px;
     color: #999999;
+    display: flex;
+    align-self: flex-end;
+    align-content: flex-end;
 }
 
 .contentBot{
@@ -180,6 +184,7 @@
 
 .activity{
     display: flex;
+    align-items: center;
     column-gap: 12px;
     margin: 10px 0 0 0;
 }
