--- a/src/Components/Main/MainPage/MainPage.module.css
+++ b/src/Components/Main/MainPage/MainPage.module.css
@@ -160,6 +160,8 @@
     cursor: pointer;
 }
 
+
+
 .titleText{
     font-size: 17px;
     font-weight: 400;
@@ -176,6 +178,18 @@
     display: flex;
     align-self: flex-end;
     align-content: flex-end;
+}
+
+.dotDelete{
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: 700;
+    line-height: 18px;
+    color: #999999;
+    cursor: pointer;
+    margin-left: 5px;
+    padding: 0 2px;
+    border-radius: 30px;
 }
 
 .contentBot{
