--- a/src/Components/Main/MainPage/CommentPage/CommentPage.module.css
+++ b/src/Components/Main/MainPage/CommentPage/CommentPage.module.css
@@ -126,7 +126,7 @@
     width: 100%;
     column-gap: 15px;
     margin-left: 65px;
-    align-items: center;
+    align-items: flex-start;
     padding-top: 10px;
     border-top: 1px solid #D9D9D9;
 }
@@ -140,11 +140,13 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: flex-start;
+    position: relative;
 }
 
 .bodyTitle {
     font-size: 16px;
-    font-weight: 800;
+    font-weight: 700;
     line-height: 18px;
     color: black;
     cursor: pointer;
@@ -210,4 +212,18 @@
     width: 555px;
     border-radius: 28px;
     border: none;
+}
+
+.commentData{
+    display: flex;
+    flex-direction: column;
+}
+
+.dotDelete{
+    position: absolute;
+    bottom: 0;
+    right:0;
+    cursor: pointer;
+    font-size: 35px;
+    color: #999999;
 }
